--- a/bank/style.css
+++ b/bank/style.css
@@ -22,37 +22,52 @@ body {
 }
 .container{
     position: absolute;
-    width: 350px;
+    width: 300px;
     height: 400px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 
-    background-image: url("/external-file/new-bg-bank.png");
+    background-image: url("/external-file/ui-bank/bg_bank1.png");
     background-position: center; 
     background-size: cover;
     visibility: visible;
 }
 
 .header{
-    width: 83%;
+    width: 100%;
     height: 7%;
-    margin-top: 3%;
+    margin-top: 17%;
+
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
+    /* justify-content: flex-end; */
+    /* align-items: center; */
+    /* background-color: #505f1a; */
+    
 }
 
 .user-name{
-    width: 50%;
+    width: 100%;
     height: 100%;
     display: flex;
-    justify-content: center;
-    align-items: flex-end;
+    justify-content: left;
+    margin-left: 10%;
 
-    color: #5F1A1F;
-    font-family: 'Special Elite', sans-serif;
+
+    color: #cfad13;
+    font-family: 'Monotype Corsiva', sans-serif;
     font-size: 2ch;
+    font-weight: bold;
+    text-shadow: 2px 2px 4px #000000;
+    letter-spacing: 2px;
+}
+
+.user-name i{
+    color: #000000;
+    margin-right: 2%;
+    text-shadow: 0 0 2px #ffffff;
 }
 
 .btn-close{
@@ -67,40 +82,47 @@ body {
     background-size: cover;
 }
 .wallet{
-    margin-top: 4.5%;
-    width: 15%;
-    height: 4%;
-    margin-left: 66%;
-
+    /* margin-top: 4.5%; */
+    width: 100%;
+    height: 100%;
     display: flex;
-    justify-content: center;
-    align-items: flex-end;
+    justify-content: right;
+    margin-right: 5%;
+    color: #cfad13;
+    font-family: 'Monotype Corsiva', sans-serif;
+    font-size: 2ch;
+    font-weight: bold;
+    text-shadow: 2px 2px 4px #000000;
+}
 
-    color: #5F1A1F;
-    font-family: 'Special Elite', sans-serif;
-    font-size: 1ch;
+.wallet i{
+    margin-top: 6%;
+    color: #000000;
+    margin-left: 5%;
+    text-shadow: 0 0 2px #ffffff;
 }
 
 .saving-account{
     width: 140px;
     height: 140px;
     margin-top: 6%;
-    margin-left: 30%;
+    margin-left: 32%;
     border-radius: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 
-    color: #5F1A1F;
+    color: #cfad13;
     font-family: 'Impact', sans-serif;
     font-size: 2.5ch;
+    text-shadow: 0 0 3px #cfad13;;
 }
 
 .action-box{
-    width: 60%;
+    width: 70%;
     height: 12%;
-    margin-left: 20%;
-    margin-top: 3%;
+    margin-left: 18%;
+    margin-top: 1%;
 
     display: flex;
     justify-content: space-between;
@@ -114,7 +136,7 @@ body {
     background-color: transparent;
     border: none;
 
-    background-image: url("/external-file/icon-bank/icon-deposit.png");
+    background-image: url("/external-file/ui-bank/but_deposit.png");
     background-position: center; 
     background-size: cover;
 
@@ -128,7 +150,7 @@ body {
     background-color: transparent;
     border: none;
 
-    background-image: url("/external-file/icon-bank/icon-withdraw.png");
+    background-image: url("/external-file/ui-bank/but_withdraw.png");
     background-position: center; 
     background-size: cover;
 }
@@ -140,7 +162,7 @@ body {
     background-color: transparent;
     border: none;
 
-    background-image: url("/external-file/icon-bank/icon-tranfer.png");
+    background-image: url("/external-file/ui-bank/but_transfer.png");
     background-position: center; 
     background-size: cover;
 }
@@ -152,7 +174,7 @@ body {
     background-color: transparent;
     border: none;
 
-    background-image: url("/external-file/icon-bank/icon-quick-withdraw.png");
+    background-image: url("/external-file/ui-bank/but_withdraw.png");
     background-position: center; 
     background-size: cover;
 }
@@ -169,10 +191,10 @@ body {
 
 .detail-action{
     position: relative;
-    width: 60%;
-    height: 10%;
-    margin-top: 3%;
-    margin-left: 20%;
+    width: 75%;
+    height: 12%;
+    margin-top: 5%;
+    margin-left: 15%;
 }
 
 .action-normal-money{
@@ -186,44 +208,49 @@ body {
     visibility: hidden;
 }
 
-.action-normal-money #text-num{
-    color: #5F1A1F;
-    font-size: 1ch;
-    font-family: 'Special Elite', sans-serif;
-    margin-right: 1%;
-}
-
 .input-money-normal{
     width: 100%;
     height: 70%;
-    border-radius: 10rem;
-    background-color: white;
-    border: 1px solid #e6d45a;
     display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
+    /* flex-direction: row;
+    justify-content: flex-end; */
+    justify-content: space-between;
     align-items: center;
+
     padding-right: 5%;
     margin-top: 1%;
 }
 
+.action-normal-money #text-num{
+    width: 60%;
+    height: 100%;
+    color: #5F1A1F;
+    font-family: 'TS-kaewPet-NP', sans-serif;
+    font-size: 3.5ch;
+
+}
 
 #dollar{
-    color: #F2E085;
-    font-family: 'Impact', sans-serif;
+    color: #5F1A1F;
+    font-family: 'Monotype Corsiva', sans-serif;
     font-size: 2ch;
+    text-shadow: 0 0 3px #696666;
 }
 
 input[type="text"]{
-    width: 90%;
-    height: 100%;
-    border: 0;
-    padding-right: 5%;
+    width: 100%;
+    height: 50%;
+    display: flex;
+    border: none;
+    border-bottom: 2px solid #5F1A1F;;
+    padding-right: 2%;
+    margin-bottom: 0%;
     text-align: end;
-
-    color: #F2E085;
+    background-color: transparent;
+    color: #5F1A1F;
     font-family: 'Impact', sans-serif;
     font-size: 2ch;
+
 }
 
 input[type="text"]:focus{
@@ -239,69 +266,68 @@ input[type="text"]:focus{
 
 .id-box{
     width:100%;
-    height: 45%;
+    height: 50%;
     border-radius: 10rem;
-    background-color: #ffffff;
-    border: 1px solid #e6d45a;
-
     display: flex;
     align-items: center;
     
 }
 
 .id-box p{
+    width:40%;
     color: #5F1A1F;
     margin-left: 2%;
-    font-size: 1ch;
-    font-family: 'Special Elite', sans-serif;
+    font-size: 3ch;
+    font-family: 'TS-kaewPet-NP', sans-serif;
+    
 }
 
 input[id="input-id"]{
-    width: 75%;
-    height: 100%;
-    border: 0;
-    padding-right: 5%;
+    width: 90%;
+    height: 70%;
+    border-bottom: 2px solid #5F1A1F;;
     text-align: end;
+    margin-right: 4%;
     
-    color: #F2E085;
+    color: #5F1A1F;
     font-family: 'Impact', sans-serif;
-    font-size: 1.5ch;
+    font-size: 1.8ch;
 }
 
 .money-box{
     width:100%;
     height: 65%;
     border-radius: 10rem;
-    background-color: #ffffff;
-    border: 1px solid #e6d45a;
-
     display: flex;
     align-items: center;
-
     margin-top: 1%;
 }
 
 .money-box #text-num{
+    width:40%;
     margin-left: 2%;
     color: #5F1A1F;
-    font-size: 1ch;
-    font-family: 'Special Elite', sans-serif;
+    font-size: 3ch;
+    font-family: 'TS-kaewPet-NP', sans-serif;
 }
 
 input[id="input-money-transfer"]{
-    width: 65%;
-    height: 100%;
-    border: 0;
-    padding-right: 5%;
+    width: 90%;
+    height: 50%;
+    border: none;
+    border-bottom: 2px solid #5F1A1F;;
+    padding-right: 2%;
     text-align: end;
+    
 
-    color: #F2E085;
+    color: #5F1A1F;
     font-family: 'Impact', sans-serif;
-    font-size: 2ch;
+    font-size: 1.8ch;
 }
 
 .action-quick-withdraw{
     position: absolute;
+    margin-top: 3%;
     width: 100%;
     height: 100%;
     visibility: hidden;
@@ -319,21 +345,21 @@ input[id="input-money-transfer"]{
 }
 
 .btn-money{
-    width: 20%;
-    height: 85%;
-    border-radius: 15rem;
-    border: 1px solid #e6d45a;
-    background-color: #5F1A1F;
+    width: 23%;
+    height: 100%;
+    border: 1px solid #ecbb1b;
+    background-color: #e6d45a;
+    box-shadow: 1px 1px 4px #000000;
 
-    color: #F2E085;
+    color: #5F1A1F;
     font-family: 'Impact', sans-serif;
-    font-size: 1.3ch;
+    font-size: 2ch;
 }
 
 .enter-line{
     width: 60%;
     height: 9%;
-    margin-top: 4%;
+    margin-top: 20%;
     margin-left: 20%;
 
     display: flex;
@@ -353,8 +379,6 @@ input[id="input-money-transfer"]{
     font-family: 'Impact', sans-serif;
     font-size: 2ch;
 }
-
-
 
 #confirm {
     display: none;
