--- a/bank/style.css
+++ b/bank/style.css
@@ -368,54 +368,68 @@ input[id="input-money-transfer"]{
 }
 
 .btn-enter{
-    width: 49px;
-    height: 23px;
-    border-radius: 10rem;
-
-    border: 1px solid #e6d45a;
-    background-color: #5F1A1F;
-
-    color: #F2E085;
-    font-family: 'Impact', sans-serif;
-    font-size: 2ch;
+    
+    width: 150px;
+    height: 60px;
+    background-color: transparent;
+    border: none;
+    background-image: url("/external-file/ui-bank/but_confirm.png");
+    background-position: center; 
+    background-size: cover;
+    transform: scale(0.65);
 }
 
 #confirm {
     display: none;
-    color: #000000;
-    border-radius: 1rem;
-    position: fixed;
-    width: 200px;
-    height: 80px;
+    position: absolute;
+    width: 210px;
+    height: 83px;
     left: 50%;
     top: 100%;
     margin-left: -100px;
+
     padding: 10px 20px 10px;
     text-align: center;
-
-    border: 1px solid #e6d45a;
-    background-color: #5F1A1F;
-
-    color: #F2E085;
-    font-family: 'Impact', sans-serif;
-    font-size: 1.3ch;
+    border: none;
+    background-color: transparent;
+    background-image: url("/external-file/ui-bank/message_box.png");
+    background-position: center; 
+    background-size: cover;
+ 
+    color: #5F1A1F;
+    font-family: 'TS-kaewPet-NP', sans-serif;
+    font-size: 2.3ch;
+}
+#confirm p {
+    text-align: center;
 }
 
-    #confirm button {
-        background-color:  #e6d45a;
-        display: inline-block;
-        border-radius: 12px;
-        border: 2px solid rgb(255, 255, 255);
-        margin-right: 5%;
-        padding: 5px;
-        text-align: center;
-        width: 60px;
-        cursor: pointer;
-        color:  #5F1A1F;
-        font-family: 'Impact', sans-serif;
-        font-size: 1.3ch;
-    }
+#confirm button {
+    display: inline-block;
+    margin-right: 5%;
+    margin-top: 5%;
+    padding: 5px;
+    text-align: center;
+    width: 65px;
+    height: 25px;
+    cursor: pointer;
+    border: none;
+}
 
-    #confirm .message {
-        text-align: left;
-    }
+.yes {
+    background-color: transparent;
+    background-image: url("/external-file/ui-bank/confirm1.png");
+    background-position: center; 
+    background-size: cover;
+}
+
+.no {
+    background-color: transparent;
+    background-image: url("/external-file/ui-bank/cancel1.png");
+    background-position: center; 
+    background-size: cover;
+}
+
+#confirm .message {
+    text-align: left;
+}
